index.html: add <main#maincontent>

--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
     </div>
 </div>
 
+<main class="enm-searchpage"  id="maincontent">
+
 <div id="app"></div>
 
 <!-- built files will be auto injected -->
+
+</main>
 
 </body>
 
