index.html: add footer

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 
 </main>
 
+<footer role="contentinfo">
+    <p class="is-centered"><a href="https://nyupress.org/">NYU Press</a> &#8226; <a href="http://dlib.nyu.edu/dlts/">NYU DLTS</a></p>
+</footer>
+
 </body>
 
 </html>
