--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+    <% if ( process.env.VUE_APP_GOOGLE_ANALYTICS_TRACKING_ID ) { %>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=<%= process.env.VUE_APP_GOOGLE_ANALYTICS_TRACKING_ID %>"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '<%= process.env.VUE_APP_GOOGLE_ANALYTICS_TRACKING_ID %>', { 'anonymize_ip': true });
+    </script>
+    <% } %>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +22,6 @@
 </head>
 
 <body>
-
 <div class="skipnav"><a href="#maincontent">Skip to main content</a></div>
 <div class="enm-topnav">
     <div class="container is-fluid">
